[tool.poetry]
name = "queueing-tool"
version = "1.2.4"
description = "A queueing network simulator"
authors = ["djordon <dan.jordon@gmail.com>"]
license = "MIT"
readme = "README.rst"
packages = [
    {include = "queueing_tool"},
]
documentation = "https://queueing-tool.readthedocs.io/en/latest/"
classifiers=[
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS :: MacOS X",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
    "Operating System :: Unix",
    "Programming Language :: Python :: 2",
    "Programming Language :: Python :: 2.7",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Cython",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Topic :: Scientific/Engineering :: Mathematics"
]
keywords = [
    'queueing theory',
    'queueing',
    'simulation',
    'queueing simulator',
    'queueing network simulation',
    'networks',
    'queueing simulation'
]

[tool.poetry.dependencies]
python = ">=3.8,<3.12"
numpy = "^1.23.3"
networkx = "^2.8.6"
matplotlib = {version = "^3.6.0", optional = true}


[tool.poetry.group.test.dependencies]
pytest = "^7.1.3"
pytest-cov = "^4.0.0"
pytest-sugar = "^0.9.5"


[tool.poetry.group.plotting.dependencies]
matplotlib = "^3.6.0"


[tool.poetry.group.dev.dependencies]
Cython = "^0.29.32"
ipdb = "^0.13.9"
ipython = "^8.5.0"


[tool.poetry.extras]
plotting = ["matplotlib"]

[build-system]
requires = ["setuptools ~= 65.4"]
build-backend = "setuptools.build_meta"
