[project]
name = "queueing-tool"
description = "A queueing network simulator"
readme = "README.rst"
authors = [{name = "Daniel Jordon", email = "dan.jordon@gmail.com"}]
version = "1.2.5"
license = {text = "MIT"}
requires-python = ">=2.7,!=3.0,!=3.1,!=3.2"
dependencies = [
    "networkx>=1.9",
    "numpy>=1.9",
    'importlib-metadata; python_version<"3.8"',
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS :: MacOS X",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
    "Operating System :: Unix",
    "Programming Language :: Python :: 2",
    "Programming Language :: Python :: 2.7",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Topic :: Scientific/Engineering :: Mathematics",
]
keywords = [
    "queueing theory",
    "queueing",
    "simulation",
    "queueing simulator",
    "queueing network simulation",
    "networks",
    "queueing simulation",
]


[project.optional-dependencies]
plotting = ["matplotlib>=1.5"]


[project.urls]
"Documentation" = "https://queueing-tool.readthedocs.io/en/latest/"
"Homepage" = "https://github.com/djordon/queueing-tool"


[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"


[tool.poetry]
name = "queueing-tool"
version = "1.2.5"
description = "A queueing network simulator"
authors = ["djordon <dan.jordon@gmail.com>"]


[tool.poetry.dependencies]
python = ">=3.8,<3.12"
numpy = "^1.23.3"
networkx = "^2.8.6"
matplotlib = {version = "^3.6.0", optional = true}
importlib-metadata = {version = "^5.0.0", python = "<3.8"}


[tool.poetry.group.test.dependencies]
pytest = "^7.1.3"
pytest-cov = "^4.0.0"
pytest-sugar = "^0.9.5"


[tool.poetry.group.plotting.dependencies]
matplotlib = "^3.6.0"


[tool.poetry.group.dev.dependencies]
Cython = "^0.29.32"
ipdb = "^0.13.9"
ipython = "^8.5.0"
twine = "^4.0.1"


[tool.poetry.extras]
plotting = ["matplotlib"]


[tool.coverage.report]
exclude_lines = ["def __repr__"]
omit = [
    "*/python?.?/*",
    "*/site-packages/nose/*",
    "*__init__*",
]


[tool.pytest.ini_options]
minversion = "6.0"
addopts = "--doctest-modules --color=yes --capture=no"
doctest_optionflags = "NORMALIZE_WHITESPACE"
testpaths = [
    "tests",
    "queueing_tool",
]
